endringer på onsdag

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -72,6 +72,7 @@
         android:layout_alignEnd="@+id/buy" />
     <ListView
         android:layout_width="300dp"
+        android:id="@+id/todaylist"
         android:layout_height="150dp"
         android:background="#ffffff"
         android:layout_marginBottom="81dp"
