--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,6 +7,7 @@
         android:id="@+id/pid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="#ffffff"
         android:visibility="gone" />
 
     <!-- Name Label -->
