--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -74,10 +74,8 @@
         android:layout_width="300dp"
         android:id="@+id/todaylist"
         android:layout_height="150dp"
-        android:background="#ffffff"
+        android:background="#0088cc"
         android:layout_marginBottom="81dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-    </ListView>
-
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
