--- a/app/src/main/res/layout/activity_forestilling.xml
+++ b/app/src/main/res/layout/activity_forestilling.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="#000000"
-    tools:context="com.example.akam.billettogram.Billett">
+    tools:context="com.example.akam.billettogram.Forestilling">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,5 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-    <include layout="@layout/content_billett" />
+
+    <include layout="@layout/content_forestilling" />
+
 </android.support.design.widget.CoordinatorLayout>
