--- a/app/src/main/res/layout/activity_forestillinger.xml
+++ b/app/src/main/res/layout/activity_forestillinger.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="#000000"
-    tools:context="com.example.akam.billettogram.Billett">
+    tools:context="com.example.akam.billettogram.Forestillinger">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,5 +21,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-    <include layout="@layout/content_billett" />
+
+    <include layout="@layout/content_forestillinger" />
+
 </android.support.design.widget.CoordinatorLayout>
