--- a/app/src/main/res/layout/content_forestilling.xml
+++ b/app/src/main/res/layout/content_forestilling.xml
@@ -9,13 +9,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.akam.billettogram.Billett"
-    tools:showIn="@layout/activity_billett">
+    tools:context="com.example.akam.billettogram.Forestilling"
+    tools:showIn="@layout/activity_forestilling">
 
 
     <TableLayout
         android:layout_width="match_parent"
-        android:id="@+id/billettstabel"
+        android:id="@+id/forestillingtabell"
         android:layout_height="170dp"
         android:background="@drawable/backgroundtheme"
         android:layout_alignParentStart="true">
@@ -54,3 +54,5 @@
         </TableRow>
     </TableLayout>
 </RelativeLayout>
+
+
