--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -56,7 +56,8 @@
         android:background="@drawable/backgroundtheme"
         android:id="@+id/buy"
         android:layout_alignTop="@+id/koppong"
-        android:layout_toEndOf="@+id/koppong" />
+        android:layout_toEndOf="@+id/koppong"
+        android:onClick="buyForestilling"/>
 
     <Button
         android:layout_width="wrap_content"
