--- a/app/src/main/res/layout/content_forestilling.xml
+++ b/app/src/main/res/layout/content_forestilling.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#000000"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.akam.billettogram.Forestilling"
@@ -22,7 +23,7 @@
 
         <TableRow>
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Tittel:"
                 android:id="@+id/tittel"
                 android:padding="3dip"
@@ -30,7 +31,7 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Dato:"
                 android:id="@+id/dato"
                 android:padding="3dip"
@@ -38,7 +39,7 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Varighet:"
                 android:id="@+id/varighet"
                 android:padding="3dip"
@@ -46,9 +47,17 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:text="Antall: "
-                android:layout_marginTop="10dp"
-                android:id="@+id/ant"
+                android:text="Ledige: "
+                android:layout_marginTop="5dp"
+                android:id="@+id/antled"
+                android:padding="3dip"
+                android:textColor="#ffffff"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:text="Sted: "
+                android:layout_marginTop="5dp"
+                android:id="@+id/place"
                 android:padding="3dip"
                 android:textColor="#ffffff"/>
         </TableRow>
