--- a/app/src/main/res/layout/content_billett.xml
+++ b/app/src/main/res/layout/content_billett.xml
@@ -63,4 +63,19 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:onClick="lastNedMusikk"/>
+
+    <ToggleButton
+        android:visibility="invisible"
+        android:layout_width="150px"
+        android:layout_height="100px"
+        android:id="@+id/playpause"
+        android:textSize="25dp"
+        android:textOff="❚❚"
+        android:background="@drawable/backgroundtheme"
+        android:textColor="#ffffff"
+        android:textOn="▶"
+        android:layout_below="@+id/download"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:onClick="startPause"/>
 </RelativeLayout>
