--- a/app/src/main/res/layout/content_betaling.xml
+++ b/app/src/main/res/layout/content_betaling.xml
@@ -11,7 +11,98 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.akam.billettogram.Betaling"
     tools:showIn="@layout/activity_betaling">
+    
 
 
+        <TextView
+            android:layout_marginTop="40dp"
+            android:id="@+id/korttext"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+            android:text="KortNr: "
+            android:padding="3dip"
+            android:textColor="#ffffff"/>
+
+
+        <EditText
+            android:layout_marginTop="10dp"
+            android:background="@drawable/inputtextarea"
+            android:layout_width="180dp"
+            android:layout_marginLeft="10dp"
+            android:padding="5dp"
+            android:id="@+id/kortnr"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:text="Utløpsdato: "
+        android:padding="3dip"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/korttext"
+        android:id="@+id/datotext" />
+
+
+    <EditText
+        android:background="@drawable/inputtextarea"
+        android:layout_width="80dp"
+        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:id="@+id/expire"
+        android:layout_height="50dp"
+        android:layout_below="@+id/korttext"
+        android:layout_centerHorizontal="true" />
+
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:text="Cvc: "
+        android:padding="3dip"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/datotext"
+        android:id="@+id/cvc" />
+
+
+    <EditText
+        android:background="@drawable/inputtextarea"
+        android:layout_width="80dp"
+        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:id="@+id/cvcedit"
+        android:layout_height="50dp"
+        android:layout_below="@+id/datotext"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Bekreft"
+        android:textColor="#ffffff"
+        android:background="@drawable/backgroundtheme"
+        android:id="@+id/confirmbuy"
+        android:layout_below="@+id/cvc"/>
+
+
+           <!--
+            <TextView
+                android:text="Utløpsdato: "
+                android:layout_marginTop="30dp"
+                android:padding="3dip"
+                android:textColor="#ffffff"/>
+
+            <EditText
+                android:background="@drawable/inputtextarea"
+                android:height="60px"
+                android:layout_marginTop="30dp"
+                android:width="50px"
+                android:layout_marginLeft="5dp"
+                android:padding="5dp"
+                android:id="@+id/expire" />-->
 
 </RelativeLayout>
