--- a/app/src/main/res/layout/content_coupon.xml
+++ b/app/src/main/res/layout/content_coupon.xml
@@ -42,6 +42,7 @@
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:text="Bekreft"
+        android:textColor="#ffffff"
         android:background="@drawable/backgroundtheme"
         android:id="@+id/accept"
         android:onClick="acceptQr"
